--- a/src/login.html
+++ b/src/login.html
@@ -37,14 +37,14 @@
                         <label for="exampleInputEmail1">
                             Email
                         </label>
-                        <input aria-describedby="emailHelp" class="form-control" name="inputEmail" placeholder="Email" type="email">
+                        <input aria-describedby="emailHelp" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email" type="email">
                         </input>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">
                             Senha
                         </label>
-                        <input class="form-control" name="inputSenha" placeholder="Senha" type="password">
+                        <input class="form-control" id="inputSenha" name="inputSenha" placeholder="Senha" type="password">
                         </input>
                     </div>
                     <div class="form-check">
@@ -54,18 +54,19 @@
                             </label>
                         </input>
                     </div>
-                    <button class="btn btn-primary" id="entrar" type="submit" onclick="Login()">
+                    <button class="btn btn-primary" id="entrar" onclick="Login()" type="button">
                         Entrar
                     </button>
                 </form>
             </div>
         </div>
     </body>
-<script crossorigin="anonymous" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
-</script>
-<script crossorigin="anonymous" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-</script>
-<script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-</script>
-<script type="text/javascript" src="js/Login.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+    </script>
+    <script crossorigin="anonymous" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+    </script>
+    <script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+    </script>
+    <script src="../js/Login.js" type="text/javascript">
+    </script>
 </html>
